# Haulage-Truck-Management-System

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: db.sqlite3
backend/app/apps/drivers/: admin.py  models.py  serializers.py  urls.py  views.py
backend/app/apps/drivers/migrations/: 0001_initial.py
backend/app/apps/jobs/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
backend/app/apps/jobs/migrations/: 0001_initial.py
backend/app/apps/trucks/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/app/apps/trucks/migrations/: 0001_initial.py  0002_alter_truck_truck_id.py
backend/app/config/: settings.py  urls.py
docker/: Dockerfile.backend  Dockerfile.frontend  docker compose.yml  docker-compose.yml  requirements.txt
frontend/: babel.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: api-truck.js  axios.js
frontend/src/components/: ActivityFeed.jsx  AppLayout.jsx  AppLayout.tsx  AppSidebar.jsx  AppSidebar.tsx  DriverFormDialog.jsx  DriverFormDialog.tsx  FleetStatusChart.jsx  FleetStatusChart.tsx  StatCard.jsx  StatCard.tsx  TopNavbar.tsx  TruckFormDialog.jsx  TruckFormDialog.tsx
frontend/src/context/: FleetContext.jsx  FleetContext.tsx
frontend/src/data/: mockData.js  mockData.ts
frontend/src/hooks/: use-toast.js
frontend/src/pages/: CreateJob.jsx  CreateJob.tsx  Dashboard.jsx  DriverProfile.jsx  DriverProfile.tsx  Drivers.jsx  Drivers.tsx  JobDetail.jsx  JobDetail.tsx  Jobs.jsx  Jobs.tsx  TruckDetail.jsx  TruckDetail.tsx  (+2 more)
(+1 files in other folders)
